--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="logo">Farmnexa</div> <div>Home</div> <div>How it Works</div> <div>Market Place</div>
 
         <section>
-            <div class="login"><a href="#" class="login-text">Login</a></div>   <div class="signup"><a href="#" class="signup-text">Get Started</a></div>
+            <a href="#" class="login">Login</a>  <a href="#" class="signup">Get Started</a>
         </section>
     </header>
     <h1>Fresh From Farm To Your Table</h1>
