--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="logo">Farmnexa</div> <div>Home</div> <div>How it Works</div> <div>Market Place</div>
 
         <section>
-            <a href="#" class="login">Login</a>  <a href="#" class="signup">Get Started</a>
+            <div class="container"><a href="#" class="login">Login</a></div>  <div class="container-1"><a href="#" class="signup">Get Started</a></div>
         </section>
     </header>
     <h1>Fresh From Farm To Your Table</h1>
