--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <h1>Fresh From Farm To Your Table</h1>
     <p>Farm connect empowers smallholders farmers by connecting them directly<br>with consumers, eliminating middlemenand promoting sustainable, fair agriculture.</p>
 
-    <div>
-        <a>Join as Farmer</a> <a>Browse Fresh Produce</a>
-    </div>
+    <section>
+        <div><a href="#">Join as Farmer</a></div>  <div><a href="#">Browse Fresh Produce</a></div>
+    </section>
 
     <div>
         <img> <img> <img> <img> <img>
