--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <p>Farm connect empowers smallholders farmers by connecting them directly<br>with consumers, eliminating middlemenand promoting sustainable, fair agriculture.</p>
 
     <section>
-        <div><a href="#">Join as Farmer</a></div>  <div><a href="#">Browse Fresh Produce</a></div>
+        <div class="container-2"><a href="#" class="jaf">Join as Farmer</a></div>  <div class="container-3"><a href="#" class="bfp">Browse Fresh Produce</a></div>
     </section>
 
     <div>
