--- a/index.html
+++ b/index.html
@@ -7,11 +7,17 @@
     <link href="styles.css" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <div class="logo">Farmnexa</div> <div>Home</div> <div>How it Works</div> <div>Market Place</div>
+    <header> 
+        <div class="logo">Farmnexa</div>
+        <section class="nav">
+            <div class="home"><a href="#">Home</a></div>
+            <div class="hiw"><a href="#">How it Works</a></div>
+            <div class="mk"><a href="#">Market Place</a></div>
+        </section>
 
         <section>
-            <div class="container"><a href="#" class="login">Login</a></div>  <div class="container-1"><a href="#" class="signup">Get Started</a></div>
+            <div class="container"><a href="#" class="login">Login</a></div>
+            <div class="container-1"><a href="#" class="signup">Get Started</a></div>
         </section>
     </header>
     <h1>Fresh From Farm To Your Table</h1>
