--- a/index.html
+++ b/index.html
@@ -27,27 +27,29 @@
         <div class="container-2"><a href="#" class="jaf">Join as Farmer</a></div>  <div class="container-3"><a href="#" class="bfp">Browse Fresh Produce</a></div>
     </section>
 
-    <div>
+    <div class="container-4">
         <img> <img> <img> <img> <img>
     </div>
 
-    <h2>Why choose FarmNexa?</h2>
-    <h3>Creating a sustainable ecosystem that benefots everyone</h3>
+   <div class="container-5"> 
+        <h2 class="wcf">Why choose FarmNexa?</h2>
+        <h3>Creating a sustainable ecosystem that benefots everyone</h3>
 
-    <section>
-        <div>
-            <img>
-            <p>Farmers create profiles and list their produce while consumers browse and place orders directly.</p>
-        </div>
-        <div>
-            <img>
-            <p>Choose between convenient home delivery or pickup from community collection points.</p>
-        </div>
-        <div>
-            <img>
-            <p>Receive fresh-farm produce while supporting sustainable local agriculture.</p>
-        </div>
-    </section>
+        <section>
+            <div>
+                <img>
+                <p>Farmers create profiles and list their produce while consumers browse and place orders directly.</p>
+            </div>
+            <div>
+                <img>
+                <p>Choose between convenient home delivery or pickup from community collection points.</p>
+            </div>
+            <div>
+                <img>
+                <p>Receive fresh-farm produce while supporting sustainable local agriculture.</p>
+            </div>
+        </section>
+    </div>
 
     <h2>How FarmNexa Works</h2>
     <p>Simple, transparent, and direct connection between farmers and consumers</p>
