--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="mk"><a href="#">Market Place</a></div>
         </section>
 
-        <section>
+        <section class="acct">
             <div class="container"><a href="#" class="login">Login</a></div>
             <div class="container-1"><a href="#" class="signup">Get Started</a></div>
         </section>
@@ -35,72 +35,79 @@
         <h2 class="wcf">Why choose FarmNexa?</h2>
         <h3>Creating a sustainable ecosystem that benefots everyone</h3>
 
-        <section>
-            <div>
+        <section class="container-6">
+            <div class="container-7">
                 <img>
-                <p>Farmers create profiles and list their produce while consumers browse and place orders directly.</p>
+                <h4>Connect</h4>
+                <p class="txt">Farmers create profiles and list their produce while consumers browse and place orders directly.</p>
             </div>
-            <div>
+            <div class="container-7">
                 <img>
-                <p>Choose between convenient home delivery or pickup from community collection points.</p>
+                <h4>Deliver</h4> 
+                <p class="txt">Choose between convenient home delivery or pickup from community collection points.</p>
             </div>
-            <div>
+            <div class="container-7">
                 <img>
-                <p>Receive fresh-farm produce while supporting sustainable local agriculture.</p>
+                <h4>Enjoy</h4>
+                <p class="txt">Receive fresh-farm produce while supporting sustainable local agriculture.</p>
             </div>
         </section>
     </div>
 
-    <h2>How FarmNexa Works</h2>
-    <p>Simple, transparent, and direct connection between farmers and consumers</p>
+   <div> 
+        <h2>How FarmNexa Works</h2>
+        <p>Simple, transparent, and direct connection between farmers and consumers</p>
 
-    <Section>
-        <h3>For Farmers</h3>
-        <ol>
-            <li><h4>Register & Setup Profile</h4>
-                <p>Create your account and add farm details</p>
-            </li>
+        <Section>
+            <h3>For Farmers</h3>
+            <ol>
+                <li>
+                    <h4>Register & Setup Profile</h4>
+                    <p>Create your account and add farm details</p>
+                </li>
             
-            <li><h4>List Your Produce</h4>
-                <p>Uploads photos, set prices, and manage inventory</p>
-            </li>
+                <li>
+                    <h4>List Your Produce</h4>
+                    <p>Uploads photos, set prices, and manage inventory</p>
+                </li>
 
-            <li>
-                <h4>Receive Orders</h4>
-                <p>Get instant notification when customers order</p>
-            </li>
+                <li>
+                    <h4>Receive Orders</h4>
+                    <p>Get instant notification when customers order</p>
+                </li>
 
-            <li>
-                <h4>Deliver & Earn</h4>
-                <p>Fulfill orders and receive direct payments</p>
-            </li>
-        </ol>
-    </section>
+                <li>
+                    <h4>Deliver & Earn</h4>
+                    <p>Fulfill orders and receive direct payments</p>
+                </li>
+            </ol>
+        </section>
 
-    <section>
-        <h3>For Consumers</h3>
-        <ol>
-            <li>
-                <h4>Browse Fresh Produce</h4>
-                <P>Discover local fresh produce from nearby farms</p>
-            </li>
+        <section>
+            <h3>For Consumers</h3>
+            <ol>
+                <li>
+                    <h4>Browse Fresh Produce</h4>
+                    <P>Discover local fresh produce from nearby farms</p>
+                </li>
 
-            <li>
-                <h4>Add to Cart</h4>
-                <p>Select items and quantites you need</p>
-            </li>
+                <li>
+                    <h4>Add to Cart</h4>
+                    <p>Select items and quantites you need</p>
+                </li>
 
-            <li>
-                <h4>Choose Payment</h4>
-                <p>Pay via bank transfer or cash on delivery</p>
-            </li>
+                <li>
+                    <h4>Choose Payment</h4>
+                    <p>Pay via bank transfer or cash on delivery</p>
+                </li>
 
-            <li>
-                <h4>Receive Fresh Produce</h4>
-                <p>Get your order delivered or pick up locally</p>
-            </li>
-        </ol>
-    </section>
+                <li>
+                    <h4>Receive Fresh Produce</h4>
+                    <p>Get your order delivered or pick up locally</p>
+                </li>
+            </ol>
+        </section>
+    </div>
 
     <div>
         <div>
