--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </section>
     </div>
 
-   <div> 
+   <div class="container-8"> 
         <h2>How FarmNexa Works</h2>
         <p>Simple, transparent, and direct connection between farmers and consumers</p>
 
