--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
     </div>
 
    <div class="container-8"> 
-        <h2>How FarmNexa Works</h2>
-        <p>Simple, transparent, and direct connection between farmers and consumers</p>
+        <h2 class="wcf">How FarmNexa Works</h2>
+        <p class="txt">Simple, transparent, and direct connection between farmers and consumers</p>
 
-        <Section>
-            <h3>For Farmers</h3>
+        <Section class="container-9">
+            <h3 class="for">For Farmers</h3>
             <ol>
                 <li>
                     <h4>Register & Setup Profile</h4>
@@ -83,8 +83,8 @@
             </ol>
         </section>
 
-        <section>
-            <h3>For Consumers</h3>
+        <section class="container-9">
+            <h3 class="for">For Consumers</h3>
             <ol>
                 <li>
                     <h4>Browse Fresh Produce</h4>
