--- a/index.html
+++ b/index.html
@@ -58,55 +58,57 @@
         <h2 class="wcf">How FarmNexa Works</h2>
         <p class="txt">Simple, transparent, and direct connection between farmers and consumers</p>
 
-        <Section class="container-9">
-            <h3 class="for">For Farmers</h3>
-            <ol>
-                <li>
-                    <h4>Register & Setup Profile</h4>
-                    <p>Create your account and add farm details</p>
-                </li>
+        <div class="container-10">
+            <Section class="container-9">
+                <h3 class="for">For Farmers</h3>
+                <ol>
+                    <li>
+                        <h4>Register & Setup Profile</h4>
+                        <p>Create your account and add farm details</p>
+                    </li>
             
-                <li>
-                    <h4>List Your Produce</h4>
-                    <p>Uploads photos, set prices, and manage inventory</p>
-                </li>
+                    <li>
+                        <h4>List Your Produce</h4>
+                        <p>Uploads photos, set prices, and manage inventory</p>
+                    </li>
 
-                <li>
-                    <h4>Receive Orders</h4>
-                    <p>Get instant notification when customers order</p>
-                </li>
+                    <li>
+                        <h4>Receive Orders</h4>
+                        <p>Get instant notification when customers order</p>
+                    </li>
 
-                <li>
-                    <h4>Deliver & Earn</h4>
-                    <p>Fulfill orders and receive direct payments</p>
-                </li>
-            </ol>
-        </section>
+                    <li>
+                        <h4>Deliver & Earn</h4>
+                        <p>Fulfill orders and receive direct payments</p>
+                    </li>
+                </ol>
+            </section>
 
-        <section class="container-9">
-            <h3 class="for">For Consumers</h3>
-            <ol>
-                <li>
-                    <h4>Browse Fresh Produce</h4>
-                    <P>Discover local fresh produce from nearby farms</p>
-                </li>
+            <section class="container-9">
+                <h3 class="for">For Consumers</h3>
+                <ol>
+                    <li>
+                        <h4>Browse Fresh Produce</h4>
+                        <P>Discover local fresh produce from nearby farms</p>
+                    </li>
 
-                <li>
-                    <h4>Add to Cart</h4>
-                    <p>Select items and quantites you need</p>
-                </li>
+                    <li>
+                        <h4>Add to Cart</h4>
+                        <p>Select items and quantites you need</p>
+                    </li>
 
-                <li>
-                    <h4>Choose Payment</h4>
-                    <p>Pay via bank transfer or cash on delivery</p>
-                </li>
+                    <li>
+                        <h4>Choose Payment</h4>
+                        <p>Pay via bank transfer or cash on delivery</p>
+                    </li>
 
-                <li>
-                    <h4>Receive Fresh Produce</h4>
-                    <p>Get your order delivered or pick up locally</p>
-                </li>
-            </ol>
-        </section>
+                    <li>
+                        <h4>Receive Fresh Produce</h4>
+                        <p>Get your order delivered or pick up locally</p>
+                    </li>
+                </ol>
+            </section>
+        </div>
     </div>
 
     <div>
