--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
     </div>
 
    <div class="container-8"> 
-        <h2 class="wcf">How FarmNexa Works</h2>
-        <p class="txt">Simple, transparent, and direct connection between farmers and consumers</p>
+        <h2 class="hfw">How FarmNexa Works</h2>
+        <p class="txt2">Simple, transparent, and direct connection between farmers and consumers</p>
 
         <div class="container-10">
             <Section class="container-9">
