--- a/index.html
+++ b/index.html
@@ -111,20 +111,20 @@
         </div>
     </div>
 
-    <div>
-        <div>
-            <h4>500+</h4>
-            <p>Active Farmers</p>
+    <div class="container-11">
+        <div class="container-12">
+            <h4 class="c12">500+</h4>
+            <p class="c12-txt">Active Farmers</p>
         </div>
 
-        <div>
-            <h4>2000+</h4>
-            <p>Happy Customers</p>
+        <div class="container-12">
+            <h4 class="c12">2000+</h4>
+            <p class="c12-txt">Happy Customers</p>
         </div>
 
-        <div>
-            <h4>20,000+</h4>
-            <p>Orders Delivered</p>
+        <div class="container-12">
+            <h4 class="c12">20,000+</h4>
+            <p class="c12-txt">Orders Delivered</p>
         </div>
     </div>
 
