--- a/index.html
+++ b/index.html
@@ -128,32 +128,34 @@
         </div>
     </div>
 
-    <h3>Farm Produce Available Now</h3>
-    <p>Discover what's fresh and in season from our local farmers</p>
-    <div>
-        <div>
-            <img>
-            <h5>Fresh Bell peppers</h5>
-            <p>500/kg</p>
-            <p>Adamu's Farm, Kaduna</p>
+    <div class="container-13">
+        <h3 class="fpa">Farm Produce Available Now</h3>
+        <p>Discover what's fresh and in season from our local farmers</p>
+        <div class="container-15">
+            <div class="container-14">
+                <img>
+                <h5>Fresh Bell peppers</h5>
+                <p class="p2">500/kg</p>
+                <p class="p3">Adamu's Farm, Kaduna</p>
+            </div>
+
+            <div class="container-14">
+                <img>
+                <h5>Sweet corn</h5>
+                <p class="p2">500/kg</p>
+                <p class="p3">Harvest Field, Plateau</p>
+            </div>
+
+            <div class="container-14">
+                <img>
+                <h5>Irish Potatoes</h5>
+                <p class="p2">500/kg</p>
+                <p class="p3">Elewaran Abeokuta</p>
+            </div>
         </div>
 
-        <div>
-            <img>
-            <h5>Sweet corn</h5>
-            <p>500/kg</p>
-            <p>Harvest Field, Plateau</p>
-        </div>
-
-        <div>
-            <img>
-            <h5>Irish Potatoes</h5>
-            <p>500/kg</p>
-            <p>Elewaran Abeokuta</p>
-        </div>
+        <a href="#" class="sap">See All Produce</a>
     </div>
-
-    <a>See All Produce</a>
 
     <section>
         <h3>You Asked, We Answered</h3>
