--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
         <a href="#" class="sap">See All Produce</a>
     </div>
 
-    <section>
-        <h3>You Asked, We Answered</h3>
+    <section class="container-16 ">
+        <h3 class="con16-txt">You Asked, We Answered</h3>
          <div>
             <p>How do i place an order on Farm Nexa?</p>
          </div>
