editted CSS code and added login

--- a/index.html
+++ b/index.html
@@ -159,26 +159,28 @@
 
     <section class="container-16 ">
         <h3 class="con16-txt">You Asked, We Answered</h3>
-         <div>
-            <p>How do i place an order on Farm Nexa?</p>
-         </div>
-         <div>
-            <p>How long does delivery take?</p>
-        </div>
-        <div>
-            <p>Can i get orders from different farmers at once?</p>
-        </div>
-         <div>
-            <p>How do i make payment?</p>
-         </div>
-        <div>
-            <p>What if i have an issue with oreder?</p>
+        <div class="cont16"> 
+            <div class="subcont16">
+                <p class="subcont16-txt">How do i place an order on Farm Nexa?</p>
+            </div>
+            <div class="subcont16">
+                <p class="subcont16-txt">How long does delivery take?</p>
+            </div>
+            <div class="subcont16">
+                <p class="subcont16-txt">Can i get orders from different farmers at once?</p>
+            </div>
+            <div class="subcont16">
+                <p class="subcont16-txt">How do i make payment?</p>
+            </div>
+            <div class="subcont16">
+                <p class="subcont16-txt">What if i have an issue with order?</p>
+            </div>
         </div>
     </section>
 
-    <section>
-        <h2>Ready to Get Started</h2>
-        <p>Join thousands of farmers and consumers already using FarmNexa</P>
+    <section class="container-17">
+        <h2 class="cont17-hdr">Ready to Get Started</h2>
+        <p class="cont17-p">Join thousands of farmers and consumers already using FarmNexa</P>
         <div>
             <a>Start Selling</a> <a>Start Shopping</a>
         </div>
