--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </section>
 
     <div class="container-4">
-        <img> <img> <img> <img> <img>
+        <img src="images/how-long-do-you-cook-nigerian-stew-step-9 1.png" alt="how-long-do-you-cook-nigerian-stew-step-9 1"> <img src="images/pic 2.png" alt="pic 2"> <img src="images/pic 3.png"> <img src="images/pic 4.png" alt="pic 4"> <img src="images/pic 5.png" alt="pic 5"> <img src="images/pic 6.png" alt="pic 6"> <img src="images/egg.png" alt="pic 7"> <img src="images/pic 8.png" alt="pic 8"> <img src="images/pic 9.png" alt="pic 9">
     </div>
 
    <div class="container-5"> 
@@ -179,10 +179,10 @@
     </section>
 
     <section class="container-17">
-        <h2 class="cont17-hdr">Ready to Get Started</h2>
-        <p class="cont17-p">Join thousands of farmers and consumers already using FarmNexa</P>
-        <div>
-            <a>Start Selling</a> <a>Start Shopping</a>
+        <div><h3 class="cont17-hdr">Ready to Get Started</h3>
+        <p class="cont17-p">Join thousands of farmers and consumers already using FarmNexa</P></div>
+        <div class="anchor">
+            <a href="#" class="start-selng">Start Selling</a> <a href="#" class="start-shpng">Start Shopping</a>
         </div>
     </section>
 
