made alot of changes

--- a/index.html
+++ b/index.html
@@ -20,20 +20,27 @@
             <div class="container-1"><a href="#" class="signup">Get Started</a></div>
         </section>
     </header>
-    <h1>Fresh From Farm To Your Table</h1>
-    <p>Farm connect empowers smallholders farmers by connecting them directly<br>with consumers, eliminating middlemen and promoting sustainable, fair agriculture.</p>
+    <div class="con">
+        <div class="sub-con">
+            <h1>Fresh From Farm To Your Table</h1>
+            <p>Farm connect empowers smallholders farmers by connecting them directly<br>with consumers, eliminating middlemen and promoting sustainable, fair agriculture.</p>
+        </div>
 
-    <section>
-        <div class="container-2"><a href="#" class="jaf">Join as Farmer</a></div>  <div class="container-3"><a href="#" class="bfp">Browse Fresh Produce</a></div>
-    </section>
-
-    <div class="container-4">
-        <img src="images/how-long-do-you-cook-nigerian-stew-step-9 1.png" alt="how-long-do-you-cook-nigerian-stew-step-9 1"> <img src="images/pic 2.png" alt="pic 2"> <img src="images/pic 3.png"> <img src="images/pic 4.png" alt="pic 4"> <img src="images/pic 5.png" alt="pic 5"> <img src="images/pic 6.png" alt="pic 6"> <img src="images/egg.png" alt="pic 7"> <img src="images/pic 8.png" alt="pic 8"> <img src="images/pic 9.png" alt="pic 9">
+        <section>
+            <div class="container-2"><a href="#" class="jaf">Join as Farmer</a></div>  <div class="container-3"><a href="#" class="bfp">Browse Fresh Produce</a></div>
+        </section>
     </div>
 
+        <div class="container-4">
+            <img src="images/how-long-do-you-cook-nigerian-stew-step-9 1.png" alt="how-long-do-you-cook-nigerian-stew-step-9 1"> <img src="images/pic 2.png" alt="pic 2"> <img src="images/pic 3.png"> <img src="images/pic 4.png" alt="pic 4"> <img src="images/pic 5.png" alt="pic 5"> <img src="images/pic 6.png" alt="pic 6"> <img src="images/egg.png" alt="pic 7"> <img src="images/pic 8.png" alt="pic 8"> <img src="images/pic 9.png" alt="pic 9"> <img src="images/pic 10.png" alt="pic 10"> <img src="images/pic 11.png" alt="pic 11"> <img src="images/pic 12.png" alt="pic 12"> 
+        </div>
+    
+
    <div class="container-5"> 
-        <h2 class="wcf">Why choose FarmNexa?</h2>
-        <h3>Creating a sustainable ecosystem that benefots everyone</h3>
+        <div class="wcf-con">
+            <h2 class="wcf">Why choose FarmNexa?</h2>
+            <h3 class="wcf-p">Creating a sustainable ecosystem that benefots everyone</h3>
+        </div>
 
         <section class="container-6">
             <div class="container-7">
@@ -55,31 +62,33 @@
     </div>
 
    <div class="container-8"> 
-        <h2 class="hfw">How FarmNexa Works</h2>
-        <p class="txt2">Simple, transparent, and direct connection between farmers and consumers</p>
+        <div class="sub-con8">
+            <h2 class="hfw">How FarmNexa Works</h2>
+            <p class="txt2">Simple, transparent, and direct connection between farmers and consumers</p>
+        </div>
 
         <div class="container-10">
             <Section class="container-9">
                 <h3 class="for">For Farmers</h3>
                 <ol>
                     <li>
-                        <h4>Register & Setup Profile</h4>
-                        <p>Create your account and add farm details</p>
+                        <h4 class="ol-hd">Register & Setup Profile</h4>
+                        <p class="ol-p">Create your account and add farm details</p>
                     </li>
             
                     <li>
-                        <h4>List Your Produce</h4>
-                        <p>Uploads photos, set prices, and manage inventory</p>
+                        <h4 class="ol-hd">List Your Produce</h4>
+                        <p class="ol-p">Uploads photos, set prices, and manage inventory</p>
                     </li>
 
                     <li>
-                        <h4>Receive Orders</h4>
-                        <p>Get instant notification when customers order</p>
+                        <h4 class="ol-hd">Receive Orders</h4>
+                        <p class="ol-p">Get instant notification when customers order</p>
                     </li>
 
                     <li>
-                        <h4>Deliver & Earn</h4>
-                        <p>Fulfill orders and receive direct payments</p>
+                        <h4 class="ol-hd">Deliver & Earn</h4>
+                        <p class="ol-p">Fulfill orders and receive direct payments</p>
                     </li>
                 </ol>
             </section>
@@ -88,23 +97,23 @@
                 <h3 class="for">For Consumers</h3>
                 <ol>
                     <li>
-                        <h4>Browse Fresh Produce</h4>
-                        <P>Discover local fresh produce from nearby farms</p>
+                        <h4 class="ol-hd">Browse Fresh Produce</h4>
+                        <P class="ol-p">Discover local fresh produce from nearby farms</p>
                     </li>
 
                     <li>
-                        <h4>Add to Cart</h4>
-                        <p>Select items and quantites you need</p>
+                        <h4 class="ol-hd">Add to Cart</h4>
+                        <p class="ol-p">Select items and quantites you need</p>
                     </li>
 
                     <li>
-                        <h4>Choose Payment</h4>
-                        <p>Pay via bank transfer or cash on delivery</p>
+                        <h4 class="ol-hd">Choose Payment</h4>
+                        <p class="ol-p">Pay via bank transfer or cash on delivery</p>
                     </li>
 
                     <li>
-                        <h4>Receive Fresh Produce</h4>
-                        <p>Get your order delivered or pick up locally</p>
+                        <h4 class="ol-hd">Receive Fresh Produce</h4>
+                        <p class="ol-p">Get your order delivered or pick up locally</p>
                     </li>
                 </ol>
             </section>
@@ -129,28 +138,36 @@
     </div>
 
     <div class="container-13">
-        <h3 class="fpa">Farm Produce Available Now</h3>
-        <p>Discover what's fresh and in season from our local farmers</p>
+        <div class="subcon-13">
+            <h3 class="fpa">Farm Produce Available Now</h3>
+            <p>Discover what's fresh and in season from our local farmers</p>
+        </div>
         <div class="container-15">
             <div class="container-14">
-                <img>
-                <h5>Fresh Bell peppers</h5>
-                <p class="p2">500/kg</p>
-                <p class="p3">Adamu's Farm, Kaduna</p>
+                <img src="images/Fresh Bell Pepper.png" alt="Fresh Bell pepper">
+                <div class="subcon-14">
+                    <h5>Fresh Bell peppers</h5>
+                    <p class="p2">500/kg</p>
+                    <p class="p3">Adamu's Farm, Kaduna</p>
+                </div>
             </div>
 
             <div class="container-14">
-                <img>
-                <h5>Sweet corn</h5>
-                <p class="p2">500/kg</p>
-                <p class="p3">Harvest Field, Plateau</p>
+                <img src="images/Sweet Corn.png" alt="Sweet Corn">
+                <div class="subcon-14">
+                    <h5>Sweet corn</h5>
+                    <p class="p2">500/kg</p>
+                    <p class="p3">Harvest Field, Plateau</p>
+                </div>
             </div>
 
             <div class="container-14">
-                <img>
-                <h5>Irish Potatoes</h5>
-                <p class="p2">500/kg</p>
-                <p class="p3">Elewaran Abeokuta</p>
+                <img src="images/Irish Potatoes.png" alt="Irish Potatoes">
+                <div class="subcon-14">
+                    <h5>Irish Potatoes</h5>
+                    <p class="p2">500/kg</p>
+                    <p class="p3">Elewaran Abeokuta</p>
+                </div>
             </div>
         </div>
 
