--- a/browse-product.html
+++ b/browse-product.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Browse Place</title>
+    <link href="browse.css" rel="stylessheet">
 </head>
 <body>
     <header>
