--- a/index.html
+++ b/index.html
@@ -204,25 +204,35 @@
     </section>
 
     <footer>
-        <section>
-            <p>Connecting farmers and consumers for a <br> sustainable future</p> 
-        </section>
+        <div>
+            <section class="frame-1">
+             <p class="frame-1txt">Connecting farmers and consumers for a <br> sustainable future</p> 
+            </section>
 
-        <section>
-            <h5>For Farmers</h5>
-            <p>Join as Farmer<br>Farmer Dashboard<br> support</P>
-        </section>
+           <div class="frame-2">
+                <section class="frame-3">
+                    <h6>For Farmers</h6>
+                    <p class="frame-2txt">Join as Farmer<br>Farmer Dashboard<br> support</P>
+                </section>
 
-        <section>
-            <h5>for Consumers</h5>
-            <p>Browse Produce<br>Create Account<br>Track Order</p>
-        </section>
+                <section class="frame-3">
+                    <h6>For Consumers</h6>
+                    <p class="frame-2txt">Browse Produce<br>Create Account<br>Track Order</p>
+                </section>
 
-        <section>
-            <h5>Company</h5>
-            <p>About US<br> Contact<br>Private Policy</p>
-        </section>
-        <p>2025 FarmNexa All rights reserved. <a>Privacy Policy</a> <a>Term of Service</a> <a>Cookies Settings</a> </p>
+                <section class="frame-3">
+                    <h6>Company</h6>
+                    <p class="frame-2txt">About US<br> Contact<br>Private Policy</p>
+                </section>
+            </div>
+
+        </div>
+
+        <hr>
+
+        <div class="frame-4">
+            <p>2025 FarmNexa All rights reserved.</p> <a>Privacy Policy</a> <a>Term of Service</a> <a>Cookies Settings</a> 
+        </div>
         
     </footer>
 </body>
