--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Farm Connect</title>
     <link href="styles.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/e39cd65f27.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
     <header> 
@@ -179,18 +181,23 @@
         <div class="cont16"> 
             <div class="subcont16">
                 <p class="subcont16-txt">How do i place an order on Farm Nexa?</p>
+                <i class="fa-solid fa-plus"></i>
             </div>
             <div class="subcont16">
                 <p class="subcont16-txt">How long does delivery take?</p>
+                <i class="fa-solid fa-plus"></i>
             </div>
             <div class="subcont16">
                 <p class="subcont16-txt">Can i get orders from different farmers at once?</p>
+                <i class="fa-solid fa-plus"></i>
             </div>
             <div class="subcont16">
                 <p class="subcont16-txt">How do i make payment?</p>
+                <i class="fa-solid fa-plus"></i>
             </div>
             <div class="subcont16">
                 <p class="subcont16-txt">What if i have an issue with order?</p>
+                <i class="fa-solid fa-plus"></i>
             </div>
         </div>
     </section>
@@ -231,7 +238,16 @@
         <hr>
 
         <div class="frame-4">
-            <p>2025 FarmNexa All rights reserved.</p> <a>Privacy Policy</a> <a>Term of Service</a> <a>Cookies Settings</a> 
+            <div class="frame-5">
+                <p class="frame-4txt">2025 FarmNexa All rights reserved.</p> <a>Privacy Policy</a> <a>Term of Service</a> <a>Cookies Settings</a>
+            </div>
+
+            <div class="social-links">
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-x-twitter"></i>
+                <i class="fa-brands fa-linkedin"></i>
+            </div>
         </div>
         
     </footer>
