made it fit mobile

--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
             <div class="container"><a href="#" class="login">Login</a></div>
             <div class="container-1"><a href="#" class="signup">Get Started</a></div>
         </section>
+
+        <div class="hamburger" id="hamburger">
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
     </header>
     <div class="con">
         <div class="sub-con">
@@ -46,17 +52,17 @@
 
         <section class="container-6">
             <div class="container-7">
-                <img>
+                <div class="con6-icon"><i class="fa-solid fa-users"></i></div>
                 <h4>Connect</h4>
                 <p class="txt">Farmers create profiles and list their produce while consumers browse and place orders directly.</p>
             </div>
             <div class="container-7">
-                <img>
+                <div class="con6-icon"><i class="fa-regular fa-truck"></i></div>
                 <h4>Deliver</h4> 
                 <p class="txt">Choose between convenient home delivery or pickup from community collection points.</p>
             </div>
             <div class="container-7">
-                <img>
+                <div class="con6-icon"><i class="fa-regular fa-leaf"></i></div>
                 <h4>Enjoy</h4>
                 <p class="txt">Receive fresh-farm produce while supporting sustainable local agriculture.</p>
             </div>
@@ -251,5 +257,8 @@
         </div>
         
     </footer>
+
+
+    @media screen and (max-width: 768px) 
 </body>
 </html>
